tests/NormalTests/paczka1/fuzzy1/31651611.err
Error in line 7: ZBihq S176 24,3
Error in line 10: ZBihq S467 18,1
Error in line 14: pB0EDS S176 39,1
Error in line 20: pB0EDS S467 22,5
Error in line 11: S185 S467 59,2
Error in line 26: pB0EDS S185 48,0
Error in line 27: YxVhJH0N A385 48,9
